tests/name_prop/name_prop.exp
Error ---------------------------------------------------------------------------------------------------- class.js:3:15

Cannot get `A.bar` because property `bar` is missing in statics of `A` [1]. [prop-missing]

   class.js:3:15
   3| var test1 = A.bar; // Error bar doesn't exist
                    ^^^

References:
   class.js:1:7
   1| class A {}
            ^ [1]


Error ---------------------------------------------------------------------------------------------------- class.js:5:21

Cannot assign `A.name` to `test3` because string [1] is incompatible with number [2]. [incompatible-type]

   class.js:5:21
   5| var test3: number = A.name; // Error string ~> number
                          ^^^^^^

References:
   class.js:1:7
   1| class A {}
            ^ [1]
   class.js:5:12
   5| var test3: number = A.name; // Error string ~> number
                 ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- class.js:8:27

Cannot get `a.constructor.bar` because property `bar` is missing in statics of `A` [1]. [prop-missing]

   class.js:8:27
   8| var test4 = a.constructor.bar; // Error bar doesn't exist
                                ^^^

References:
   class.js:7:9
   7| var a = new A();
              ^^^^^^^ [1]


Error --------------------------------------------------------------------------------------------------- class.js:10:21

Cannot assign `a.constructor.name` to `test6` because string [1] is incompatible with number [2]. [incompatible-type]

   class.js:10:21
   10| var test6: number = a.constructor.name; // Error string ~> number
                           ^^^^^^^^^^^^^^^^^^

References:
   class.js:1:7
    1| class A {}
             ^ [1]
   class.js:10:12
   10| var test6: number = a.constructor.name; // Error string ~> number
                  ^^^^^^ [2]



Found 4 errors
